--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+          <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quiz App!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="/node_modules/bulma-extensions/dist/css/bulma-extensions.min.css">
   </head>
-  <body>
+   <body>
   <section class="section">
     <div class="container">
       <h1 class="title">
@@ -17,5 +18,6 @@
       </p>
     </div>
   </section>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.min.js"></script>
   </body>
 </html>
