--- a/index.html
+++ b/index.html
@@ -16,6 +16,67 @@
       <p class="subtitle">
        Have fun creating Quiz app <strong>in JS</strong>!
       </p>
+      <!-- Main container -->
+<nav class="level">
+    <div class="level-left"></div>
+    <!-- Right side -->
+    <div class="level-right has-text-centered">
+        <div class="level-item">
+            <div>
+              <p class="heading">Hits</p>
+              <p class="title">Total Hits</p>
+            </div>
+        </div>
+    </div>
+</nav>
+<!-- /nav.level -->
+<div class="steps" id="stepsDemo">
+  <div class="step-item is-active is-success">
+    <div class="step-marker">1</div>
+    <div class="step-details">
+      <p class="step-title">Account</p>
+    </div>
+  </div>
+  <!-- /div.step-item -->
+  <div class="step-item">
+    <div class="step-marker">2</div>
+    <div class="step-details">
+      <p class="step-title">Profile</p>
+    </div>
+  </div>
+  <!-- /div.step-item -->
+  <div class="step-item">
+    <div class="step-marker">3</div>
+    <div class="step-details">
+      <p class="step-title">Social</p>
+    </div>
+  </div>
+  <!-- /div.step-item -->
+  <div class="step-item">
+    <div class="step-marker">4</div>
+    <div class="step-details">
+      <p class="step-title">Finish</p>
+    </div>
+  </div>
+  <!-- /div.step-item -->
+  
+  <div class="steps-content column is-mobile">
+      <!-- Your questions here -->
+  </div>
+  <!-- /div.step-content -->
+  
+  <div class="steps-actions">
+    <div class="steps-action">
+      <a href="#" data-nav="previous" class="button is-light">Previous</a>
+    </div>
+    <div class="steps-action">
+      <a href="#" data-nav="next" class="button is-light">Next</a>
+    </div>
+  </div>
+  <!-- /div.step-actions -->
+</div>
+  <!-- /div.steps -->
+
     </div>
   </section>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.min.js"></script>
