--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
   <!-- /div.step-item -->
   
   <div class="steps-content column is-mobile">
-      <!-- Your questions here -->
+    <!-- Your questions here -->
+    <div class="step-content column is-6 is-offset-3 is-active">
+      <h2 class="title">Question # 1</h2>
+      <div class="tile is-ancestor">
+        <div class="tile is-12">
+          <div class="tile box option-box answer">
+            <p class="subtitle">a)</p>
+            <p>Option 1</p>
+          </div>
+        </div>
+      </div>
+  </div>
+    
   </div>
   <!-- /div.step-content -->
   
@@ -80,5 +92,8 @@
     </div>
   </section>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.min.js"></script>
+  <!-- Development version, includes helpful console warnings -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
   </body>
 </html>
