--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/node_modules/bulma-extensions/dist/css/bulma-extensions.min.css">
   </head>
    <body>
-  <section class="section">
+  <section class="section" id="app"> 
     <div class="container">
       <h1 class="title">
         Welcome to the Quiz App Show
@@ -94,6 +94,6 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.min.js"></script>
   <!-- Development version, includes helpful console warnings -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
+  <script src="js/app.js"></script>
   </body>
 </html>
